--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,6 @@
 # in the templates via {{ site.myvariable }}.
 
 title: d381blog
-email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -31,7 +30,7 @@ twitter_username: krinkko_the_cat
 github_username:  krinkko
 
 # Build settings
-theme: minima
+theme: lanyon
 plugins:
   - jekyll-feed
 
