--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ twitter_username: krinkko_the_cat
 github_username:  krinkko
 
 # Build settings
-theme: minima
+theme: lanyon
 plugins:
   - jekyll-feed
 
