--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ domain: krinkko.github.io
 url: "https://krinkko.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: krinkko_the_cat
 github_username:  krinkko
+timezone: Europe/Berlin
 
 # Build settings
 theme: jekyll-dash
