--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  krinkko
 timezone: Europe/Berlin
 
 # Build settings
-theme: jekyll-dash
+remote-theme: bitbrain/jekyll-dash
 plugins:
   - jekyll-feed
   - jekyll-archives
