--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  krinkko
 timezone: Europe/Berlin
 
 # Build settings
-remote_theme: LeNPaul/Lagrange
+remote_theme: poole/lanyon
 plugins:
   - jekyll-feed
   - jekyll-archives
