--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,12 @@ github_username:  krinkko
 timezone: Europe/Berlin
 
 # Build settings
-remote_theme: poole/lanyon
-plugins:
-  - jekyll-feed
-  - jekyll-archives
+remote_theme: LeNPaul/Lagrange
+paginate:            5
+markdown:            kramdown
+highlighter:         rouge
+permalink:           /:title
+plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 
 # Exclude from processing.
 # The following items will not be processed, by default.
