--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,11 @@ paginate:            5
 markdown:            kramdown
 highlighter:         rouge
 permalink:           /:title
-plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag, jekyll-remote-theme]
+plugins:
+  - jekyll-feed
+  - jekyll-archives
+  - jekyll-sitemap
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
