--- a/_config.yml
+++ b/_config.yml
@@ -30,11 +30,12 @@ timezone: Europe/Berlin
 
 # Build settings
 remote_theme: harveynick/lagrange
-paginate:            5
-markdown:            kramdown
-highlighter:         rouge
-permalink:           /:title
-plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
+plugins:
+ - jekyll-paginate
+ - jekyll-sitemap
+ - jekyll-feed
+ - jekyll-seo-tag
+ - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
