--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ github_username:  krinkko
 timezone: Europe/Berlin
 
 # Build settings
-remote_theme: amitmerchant1990/reverie
+remote_theme: benbalter/retlab
 plugins:
  - jekyll-paginate
  - jekyll-sitemap
