--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ plugins:
  - jekyll-remote-theme
 
 # Build settings
-theme: minima
+remote_theme: bitbrain/jekyll-dash
 
 
 # Exclude from processing.
