--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,9 @@ plugins:
 
 # Build settings
 remote_theme: b2a3e8/jekyll-theme-console
-
+header_pages:
+  - index.md
+  - about.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
