--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,8 @@ remote_theme: b2a3e8/jekyll-theme-console
 header_pages:
   - index.md
   - about.md
+style: dark # dark (default), light or hacker
+listen_for_clients_preferred_style: true # false (default) or true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
