--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://krinkko.github.io"
-title = "d381blog"
+title = "krinkko's"
 theme = "etch"
 themesDir = "themes"
 languageCode = "de-de"
