--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ enableEmoji = true
 paginate = 5
 
 [params]
-  description = "kleiner sysadmin blog mit einigen gedanken, die auch gern mal von IT abschweifen"
+  description = "raunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles <3"
   copyright = "© 2022 d381blog"
   dark = "auto"
   highlight = true
