--- a/config.toml
+++ b/config.toml
@@ -13,7 +13,7 @@ paginate = 5
 
 [params]
   description = "Braunschweig based sysadmin. Proud father of two and husband. I like hardcore punk, songwriters to rap. Open mind, open heart. LOVES bicycles <3"
-  copyright = "© {{ PAGE.Lastmod }} d381blog"
+  copyright = "© 2024 d381blog"
   dark = "auto"
   highlight = true
 
