--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -41,3 +41,12 @@ enabled = true
 
 [imageProcessing.content]
 enabled = true
+
+[comments]
+enabled = true
+provider = "cactus"
+
+[comments.cactus]
+defaultHomeserverUrl = "https://matrix.cactus.chat:8448"
+serverName = "cactus.chat"
+siteName = "krinkko.github.io"
