--- a/data/external.yaml
+++ b/data/external.yaml
@@ -36,7 +36,7 @@ KaTeX:
       defer: true
 
 Cactus:
-    - src: /cactus.js
+    - src: /js/cactus.js
       integrity:
       type: script
     - src: /style.css
