--- a/config.toml
+++ b/config.toml
@@ -74,3 +74,13 @@ type = "toc"
   [privacy.youtube]
     disable = false
     privacyEnhanced = true
+
+
+[comments]
+enabled = true
+provider = "cactus"
+
+[comments.cactus]
+defaultHomeserverUrl = "https://matrix.cactus.chat:8448"
+serverName = "cactus.chat"
+siteName = "krinkko.github.io"
