--- a/data/external.yaml
+++ b/data/external.yaml
@@ -38,7 +38,7 @@ KaTeX:
 Cactus:
     - src: /cactus.js
       integrity:
-      type: script
+      type: 
     - src: /style.css
       integrity:
       type: style
